# DStruct-C

./: CMakeLists.txt  README.md
Queue/: queue.c  queue.h
src/LinkedList/: linked_list.c  linked_list.h
src/Queue/: queue.c  queue.h
src/Stack/: stack.c  stack.h
test/: linked_list_test.c  linked_list_test.h  main_test.c  queue_test.c  queue_test.h  stack_test.h
